initial styling & update copy

--- a/index.html
+++ b/index.html
@@ -32,42 +32,44 @@
         <h5 class="heading">Fullstack Javascript Developer</h5>
         <hr />
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, totam.</p>
-        <a href="#" class="btn">Let's Get This Bread, Gamers</a>
+        <a href="#" class="btn">Let's Git It</a>
       </section>
 
       <section class="details">
         <div class="column-wrapper">
-          <div class="col">
-            <h2 class="heading">Listen Up...</h2>
+          <div class="col-lg">
+            <h2 class="heading">About Me</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus delectus labore
-              quae aspernatur, exercitationem molestiae maiores recusandae sint vitae ipsa porro
-              doloremque quo a incidunt ratione temporibus eum accusantium quasi.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores quae neque nam
+              commodi illum amet, ducimus veritatis assumenda repudiandae eaque totam a tenetur
+              recusandae aut deserunt magni eos. Quibusdam eligendi soluta labore reprehenderit,
+              eaque nihil quos sit doloribus nam quidem dolor eius voluptatum illum, numquam debitis
+              odio autem facere vero.
             </p>
           </div>
-          <div class="col">
+          <div class="col-sm">
             <h3 class="heading">Skills</h3>
             <table>
               <tr>
-                <td>web development</td>
+                <td>Node.js</td>
               </tr>
               <tr>
-                <td>creative coding</td>
+                <td>React</td>
               </tr>
               <tr>
-                <td>graphic design</td>
+                <td>Electron</td>
               </tr>
               <tr>
-                <td>audio production</td>
+                <td>Redux</td>
               </tr>
               <tr>
-                <td>Sound Design</td>
+                <td>Mongodb</td>
               </tr>
             </table>
           </div>
         </div>
 
-        <div>
+        <div class="history">
           <h3 class="heading">Work History</h3>
 
           <table>
@@ -82,21 +84,21 @@
             <tbody>
               <tr>
                 <td>1</td>
-                <td>Apple</td>
+                <td>glitch.cool</td>
                 <td>Software Engineer</td>
-                <td>Swift</td>
+                <td>Node, Electron, Gatsby</td>
               </tr>
               <tr>
                 <td>2</td>
-                <td>Microsoft</td>
-                <td>Computer Scientist</td>
-                <td>.NET</td>
+                <td>a l e p h</td>
+                <td>Lead Developer</td>
+                <td>Node, Electron, p5.js</td>
               </tr>
               <tr>
-                <td>3</td>
-                <td>Amazon</td>
-                <td>Dev Ops</td>
-                <td>AWS</td>
+                <td>8</td>
+                <td>Outlier Recordings</td>
+                <td>Graphic Designer</td>
+                <td>Adobe Suite</td>
               </tr>
             </tbody>
           </table>
