--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>My Resume</title>
+    <title>Alex Gohorel - Resume</title>
 
     <link rel="stylesheet" href="css/index.css" />
 
@@ -21,7 +23,7 @@
             <a href="#">Home</a>
             <a href="#">About</a>
             <a href="#">Portfolio</a>
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
           </nav>
         </header>
       </div>
@@ -32,7 +34,7 @@
         <h5 class="heading">Fullstack Javascript Developer</h5>
         <hr />
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, totam.</p>
-        <a href="#" class="btn">Let's Git It</a>
+        <a href="contact.html" class="btn">Let's Git It</a>
       </section>
 
       <section class="details">
@@ -106,7 +108,7 @@
       </section>
 
       <footer>
-        <p>Copyright Dr. Steve Brule 2019</p>
+        <p>Copyright Alex Gohorel 2019</p>
       </footer>
     </div>
   </body>
