--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <nav>
             <a href="#">Home</a>
             <a href="#">About</a>
-            <a href="#">Portfolio</a>
+            <a href="https://agohorel.github.io/portfolio-website/" target="_blank">Portfolio</a>
             <a href="contact.html">Contact</a>
           </nav>
         </header>
