--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Alex Gohorel - Resume</title>
 
     <link rel="stylesheet" href="css/index.css" />
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
 
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -16,6 +17,11 @@
   </head>
 
   <body>
+    <div class="p5">
+      <div id="p5-container">
+        <!-- p5 canvas goes here -->
+      </div>
+    </div>
     <div class="container">
       <div class="header-container">
         <header>
@@ -111,5 +117,7 @@
         <p>Copyright Alex Gohorel 2019</p>
       </footer>
     </div>
+
+    <script type="text/javascript" src="vectors.js"></script>
   </body>
 </html>
